Fix T45847: Pie looses focus when mouse cursor passes through a pie button